fix some points